# neat_lib

./: Cargo.toml  LICENSE  README.md  config.json
examples/: xor.rs  xor_config.json
src/: lib.rs
src/example/: mod.rs  xor.rs
src/loader/: save_load.rs
src/neat/: activation.rs  aggregation.rs  attribute.rs  config.rs  connection_gene.rs  errors.rs  gene.rs  genome.rs  math.rs  mod.rs  population.rs  species.rs  test_config_1.json
src/network/: activation.rs  attribute.rs  config.rs  connection_gene.rs  errors.rs  gene.rs  genome.rs  innovation_number.rs  mod.rs  population.rs  species.rs  xor.rs
src/nn/: feedforward.rs  layer.rs  mod.rs
