[package]
name = "neat_lib"
authors = "jing guo"
version = "0.1.0"
edition = "2021"
description  = "Rust implementation of NeuroEvolution of Augmenting Topologies"
readme = "README"
repository = "https://github.com/rust-lang/cargo/"

[lib]
name = "neat_lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = { version = "0.3", default-features=false}
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
pretty_env_logger = "0.5"
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
rand_distr = { version = "0.4.3" }
rand = "0.8"
